# path_extract

./: .gitignore  README.md  push.ps1  pyproject.toml  test.csv
figures/250701_CLMT_Pilot_Sprint/p1_pier6/: compare.html
inputs/: sample.html
inputs/250701_CLMT_Pilot_Sprint/bpcr/exp_0/: _2.csv  info.json
inputs/sample/: sample.html  sample.json
notebooks/: 01_pier6.ipynb  02_waterfall.ipynb
quarto_notebooks/: _publish.yml  main.html  main.qmd  main.quarto_ipynb
scripts/: experiments.ps1  setup.ps1
src/path_extract/: BROWSER.py  constants.py  examples.py  file_utils.py  paths.py  project_paths.py  utils.py  vega_colors.py
src/path_extract/analyze/: analyze.py
src/path_extract/api/: main.py
src/path_extract/categories/: assign.py  categories.py  main.py
src/path_extract/clmt_pilot/: colors.py  dataframes.py  main.py  plots.py  revised_categories.py  study.py
src/path_extract/data/: columns.py  data_waterfall.py  dataframes.py  utils.py
src/path_extract/extract/: breakdown.py  combine.py  extract.py  helpers.py  overview.py
src/path_extract/materials/: __init__.py  data.py  playground.py
src/path_extract/plots/: __init__.py  dot_compare.py  element_compare.py  pie.py  revised_categories.py  seq.py  stacked_compare.py  straight_compare.py  summary.py  waterfall.py
src/path_extract/study/: calc.py  colors.py  dataframes.py  main.py  plots.py  plots2.py  pres.py  waterfall.py
src/pathfinder/: __init__.py  constants.py  paths.py
src/pathfinder/extract/: extract.py
tests/: test_extract.py  test_read.py  test_waterfall.py
(+80 files in other folders)
