[project]
name = "path_extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyprojroot>=0.3.0",
    "pytest>=8.4.1",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
