[project]
name = "path_extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "altair-viewer>=0.4.0",
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "lxml>=6.0.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyprojroot>=0.3.0",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
